src/containers/Header/style.scss
.header {
    padding: 20px;
    position: relative;
    z-index: 2;
    background-color: #96D5F0;

    img {
        width: 85px;
    }

    button {
        background: none;
        outline: none;
        border: none;
    }

    .desktop-nav {
        display: none;
    }

    @media (min-width: 520px) {
        background-color: transparent;
    }

    @media (min-width: 781px) {
        img {
            width: 100px;
        }

        .desktop-nav {
            display: block;
        }

        button {
            display: none;
        }

        .mobile-nav {
            display: none;
        }
    }
}

